[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/ui/button_pressed.svg" type="Texture" id=1]
[ext_resource path="res://assets/ui/button_normal.svg" type="Texture" id=2]
[ext_resource path="res://assets/ui/button_hover.svg" type="Texture" id=3]
[ext_resource path="res://assets/ui/icon_cargo_upgrade.svg" type="Texture" id=4]
[ext_resource path="res://assets/ui/icon_health_upgrade.svg" type="Texture" id=5]
[ext_resource path="res://assets/ui/fonts/default_font_bold.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/ui/icon_speed_upgrade.svg" type="Texture" id=7]
[ext_resource path="res://assets/ui/icon_mining_upgrade.svg" type="Texture" id=8]
[ext_resource path="res://assets/ui/icon_weapon_upgrade.svg" type="Texture" id=9]
[ext_resource path="res://src/UI/UpgradeUI.gd" type="Script" id=10]

[node name="UpgradeUI" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -348.0
margin_top = -84.0
margin_right = 348.0
margin_bottom = 84.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 676.0
margin_bottom = 148.0

[node name="HealthUpgrade" type="TextureButton" parent="HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HealthUpgrade"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -55.0
margin_right = 45.0
margin_bottom = 55.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/HealthUpgrade/MarginContainer"]
margin_left = 5.0
margin_right = 85.0
margin_bottom = 105.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/HealthUpgrade/MarginContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HBoxContainer/HealthUpgrade/MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 80.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 6 )
text = "Health++"
align = 1

[node name="SpeedUpgrade" type="TextureButton" parent="HBoxContainer"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/SpeedUpgrade"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -55.0
margin_right = 45.0
margin_bottom = 55.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SpeedUpgrade/MarginContainer"]
margin_left = 5.0
margin_right = 85.0
margin_bottom = 105.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/SpeedUpgrade/MarginContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HBoxContainer/SpeedUpgrade/MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 80.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 6 )
text = "Speed++"
align = 1

[node name="CargoUpgrade" type="TextureButton" parent="HBoxContainer"]
margin_left = 264.0
margin_right = 392.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/CargoUpgrade"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -55.0
margin_right = 45.0
margin_bottom = 55.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CargoUpgrade/MarginContainer"]
margin_left = 5.0
margin_right = 85.0
margin_bottom = 105.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CargoUpgrade/MarginContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HBoxContainer/CargoUpgrade/MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 80.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 6 )
text = "Cargo++"
align = 1

[node name="MineSpeedUpgrade" type="TextureButton" parent="HBoxContainer"]
margin_left = 396.0
margin_right = 524.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MineSpeedUpgrade"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -55.0
margin_right = 45.0
margin_bottom = 55.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MineSpeedUpgrade/MarginContainer"]
margin_left = 5.0
margin_right = 85.0
margin_bottom = 105.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MineSpeedUpgrade/MarginContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HBoxContainer/MineSpeedUpgrade/MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 80.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 6 )
text = "Mining++"
align = 1

[node name="WeaponUpgrade" type="TextureButton" parent="HBoxContainer"]
margin_left = 528.0
margin_right = 656.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/WeaponUpgrade"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/WeaponUpgrade/MarginContainer"]
margin_left = 5.0
margin_right = 105.0
margin_bottom = 105.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/WeaponUpgrade/MarginContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HBoxContainer/WeaponUpgrade/MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 100.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 6 )
text = "Weapons++"
align = 1
